--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <header>
-    <img src="assets/headshot.jpg" alt="Ash Naidoo">
-    <h1>Ash Naidoo</h1>
-    <p>Senior Software Engineer | Fintech Expert | AWS Certified</p>
+    <img src="assets/img.png" alt="Ash Naidoo">
+    <h1>Caylin John Naidoo</h1>
+    <p>Senior Software Engineer | AWS Certified</p>
     <nav>
       <a href="#about">About</a>
       <a href="#skills">Skills</a>
