--- a/projects/project1.html
+++ b/projects/project1.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,49 +5,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Real-Time Commercial Payment Engine</title>
     <link rel="stylesheet" href="../style.css" />
+    <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet"/>
+    <style>
+        .container {
+          max-width: 960px;
+          margin: auto;
+          padding: 2rem;
+          background: white;
+          border-radius: 12px;
+          box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+          margin-top: 2rem;
+        }
+        h1, h2 {
+          color: #004d99;
+        }
+        ul {
+          list-style: disc;
+          margin-left: 1.5rem;
+        }
+        a.back-link {
+          display: inline-block;
+          margin-top: 1rem;
+          text-decoration: none;
+          color: #0077cc;
+        }
+        a.back-link:hover {
+          text-decoration: underline;
+        }
+    </style>
 </head>
-<body>
-<header>
+<body style="background: #f4f7fb; font-family: 'Segoe UI', sans-serif;">
+
+<div class="container" data-aos="fade-up">
     <h1>Real-Time Commercial Payment Engine</h1>
-    <p><a href="../index.html">← Back to Portfolio</a></p>
-</header>
+    <p><a href="../index.html" class="back-link">← Back to Portfolio</a></p>
 
-<section>
-    <h2>Overview</h2>
-    <p>
-        A high-performance, fault-tolerant commercial payment processing engine built for a major bank, capable of handling over 1000 transactions per second.
-    </p>
+    <section data-aos="fade-up" data-aos-delay="100">
+        <h2>Overview</h2>
+        <p>
+            A high-performance, fault-tolerant commercial payment processing engine built for a major bank, capable of handling over 1000 transactions per second.
+        </p>
+    </section>
 
-    <h2>Tech Stack</h2>
-    <ul>
-        <li><strong>Language:</strong> Java 17</li>
-        <li><strong>Frameworks:</strong> Spring Boot, Spring Cloud</li>
-        <li><strong>Infrastructure:</strong> AWS (Lambda, RDS, S3, Secrets Manager, CloudWatch)</li>
-        <li><strong>Orchestration:</strong> Camunda BPM</li>
-        <li><strong>Observability:</strong> CloudWatch, SonarQube, Elastic APM</li>
-        <li><strong>IaC:</strong> Terraform</li>
-    </ul>
+    <section data-aos="fade-up" data-aos-delay="200">
+        <h2>Tech Stack</h2>
+        <ul>
+            <li><strong>Language:</strong> Java 17</li>
+            <li><strong>Frameworks:</strong> Spring Boot, Spring Cloud</li>
+            <li><strong>Infrastructure:</strong> AWS (Lambda, RDS, S3, Secrets Manager, CloudWatch)</li>
+            <li><strong>Orchestration:</strong> Camunda BPM</li>
+            <li><strong>Observability:</strong> CloudWatch, SonarQube, Elastic APM</li>
+            <li><strong>IaC:</strong> Terraform</li>
+        </ul>
+    </section>
 
-    <h2>My Contributions</h2>
-    <ul>
-        <li>Designed and implemented a multi-step transactional workflow using Camunda BPM for process orchestration.</li>
-        <li>Secured RDS connections using Kerberos and AWS Secrets Manager integration.</li>
-        <li>Integrated SonarQube into the CI pipeline to enforce code quality standards.</li>
-        <li>Led migration of legacy payment flows to microservices architecture on AWS.</li>
-        <li>Mentored junior developers and led code reviews to uphold clean code practices.</li>
-    </ul>
+    <section data-aos="fade-up" data-aos-delay="300">
+        <h2>My Contributions</h2>
+        <ul>
+            <li>Designed and implemented a multi-step transactional workflow using Camunda BPM.</li>
+            <li>Secured RDS connections using Kerberos and AWS Secrets Manager integration.</li>
+            <li>Integrated SonarQube into CI pipeline to enforce code quality.</li>
+            <li>Led migration of legacy flows to AWS microservices architecture.</li>
+            <li>Mentored junior developers and conducted peer code reviews.</li>
+        </ul>
+    </section>
 
-    <h2>Business Impact</h2>
-    <ul>
-        <li>Achieved compliance with new SARB real-time traceability regulations.</li>
-        <li>Reduced latency by 40% through performance optimization and cloud migration.</li>
-        <li>Improved team productivity and reduced post-release bugs by 60%.</li>
-        <li>Zero downtime during peak traffic events like Black Friday and salary week.</li>
-    </ul>
-</section>
+    <section data-aos="fade-up" data-aos-delay="400">
+        <h2>Business Impact</h2>
+        <ul>
+            <li>Met SARB real-time traceability compliance.</li>
+            <li>Reduced transaction latency by 40%.</li>
+            <li>Improved team efficiency and reduced bugs by 60%.</li>
+            <li>Maintained 100% uptime during peak financial events.</li>
+        </ul>
+    </section>
+</div>
 
-<footer>
-    <p>© 2025 Caylin John Naidoo</p>
-</footer>
+<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+<script>
+    AOS.init({
+      duration: 700,
+      easing: 'ease-in-out',
+      once: true
+    });
+</script>
 </body>
 </html>
