--- a/projects/project1.html
+++ b/projects/project1.html
@@ -6,6 +6,7 @@
     <title>Real-Time Commercial Payment Engine</title>
     <link rel="stylesheet" href="../style.css" />
     <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet"/>
+    <script async defer data-domain="ashnaidoo.github.io" src="https://plausible.io/js/script.js"></script>
     <style>
         .container {
           max-width: 960px;
@@ -32,10 +33,14 @@
         a.back-link:hover {
           text-decoration: underline;
         }
+        body {
+          font-family: 'Segoe UI', sans-serif;
+          background: #f4f7fb;
+          margin: 0;
+        }
     </style>
 </head>
-<body style="background: #f4f7fb; font-family: 'Segoe UI', sans-serif;">
-
+<body>
 <div class="container" data-aos="fade-up">
     <h1>Real-Time Commercial Payment Engine</h1>
     <p><a href="../index.html" class="back-link">← Back to Portfolio</a></p>
@@ -62,21 +67,21 @@
     <section data-aos="fade-up" data-aos-delay="300">
         <h2>My Contributions</h2>
         <ul>
-            <li>Designed and implemented a multi-step transactional workflow using Camunda BPM.</li>
+            <li>Designed and implemented a multi-step transactional workflow using Camunda BPM for process orchestration.</li>
             <li>Secured RDS connections using Kerberos and AWS Secrets Manager integration.</li>
-            <li>Integrated SonarQube into CI pipeline to enforce code quality.</li>
-            <li>Led migration of legacy flows to AWS microservices architecture.</li>
-            <li>Mentored junior developers and conducted peer code reviews.</li>
+            <li>Integrated SonarQube into the CI pipeline to enforce code quality standards.</li>
+            <li>Led migration of legacy payment flows to microservices architecture on AWS.</li>
+            <li>Mentored junior developers and led code reviews to uphold clean code practices.</li>
         </ul>
     </section>
 
     <section data-aos="fade-up" data-aos-delay="400">
         <h2>Business Impact</h2>
         <ul>
-            <li>Met SARB real-time traceability compliance.</li>
-            <li>Reduced transaction latency by 40%.</li>
-            <li>Improved team efficiency and reduced bugs by 60%.</li>
-            <li>Maintained 100% uptime during peak financial events.</li>
+            <li>Achieved compliance with new SARB real-time traceability regulations.</li>
+            <li>Reduced latency by 40% through performance optimization and cloud migration.</li>
+            <li>Improved team productivity and reduced post-release bugs by 60%.</li>
+            <li>Zero downtime during peak traffic events like Black Friday and salary week.</li>
         </ul>
     </section>
 </div>
