--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
   <title>Ash Naidoo – Senior Software Engineer</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet"/>
-  <script async defer data-domain="ashnaidoo.github.io" src="https://plausible.io/js/script.js"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-S6299VCP8S"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-S6299VCP8S');
+  </script>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
