--- a/index.html
+++ b/index.html
@@ -141,21 +141,22 @@
     </ul>
   </section>
 
-  <section id="contact" data-aos="fade-up" data-aos-delay="300">
-    <h2>Contact</h2>
-    <form action="https://formspree.io/f/yourformid" method="POST">
-      <label for="name">Name:</label><br />
-      <input type="text" name="name" required><br /><br />
-
-      <label for="email">Email:</label><br />
-      <input type="email" name="email" required><br /><br />
-
-      <label for="message">Message:</label><br />
-      <textarea name="message" rows="5" required></textarea><br /><br />
-
-      <button type="submit">Send Message</button>
-    </form>
-  </section>
+  <!-- modify this form HTML and place wherever you want your form -->
+  <form
+          action="https://formspree.io/f/xnnvakeb"
+          method="POST"
+  >
+    <label>
+      Your email:
+      <input type="email" name="email">
+    </label>
+    <label>
+      Your message:
+      <textarea name="message"></textarea>
+    </label>
+    <!-- your other form fields go here -->
+    <button type="submit">Send</button>
+  </form>
 </div>
 
 <footer>
