--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
       background: #222;
       color: #aaa;
       margin-top: 2rem;
-    }
+    }s
   </style>
 </head>
 <body>
 
 <header data-aos="fade-down">
-  <img src="assets/headshot.jpg" alt="Ash Naidoo">
+  <img src="assets/img.png" alt="Ash Naidoo">
   <h1>Ash Naidoo</h1>
   <p>Senior Software Engineer | Fintech Expert | AWS Certified</p>
   <nav>
