--- a/index.html
+++ b/index.html
@@ -23,7 +23,50 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<style>
-			#header .content p {
+			/* Global layout: full height, no scrolling */
+            html, body {
+				height: 100%;
+				margin: 0;
+				display: flex;
+				flex-direction: column;
+			}
+
+			#wrapper {
+				flex: 1;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				justify-content: flex-start;
+				padding-top: 2rem;
+				padding-left: 1rem;
+				padding-right: 1rem;
+				box-sizing: border-box;
+				width: 100%;
+				overflow: hidden; /* Remove this if footer still cuts off */
+			}
+
+			#main {
+				width: 100%;
+				flex: 1;
+				overflow-y: auto;
+				padding-bottom: 2rem;
+				box-sizing: border-box;
+			}
+
+
+            /* Background image behind everything */
+            #bg {
+				position: fixed;
+				top: 0;
+				left: 0;
+				height: 100%;
+				width: 100%;
+				z-index: -1;
+			}
+
+
+            /* Header text formatting */
+            #header .content p {
                 text-transform: none !important;
                 text-align: justify;
                 text-align-last: center;
@@ -32,92 +75,104 @@
                 max-width: 600px;
                 font-family: Roboto;
             }
-			/* SCROLLER CONTAINER */
-.tooltip {
-  position: relative;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0 40px;
-}
 
-.tooltip img {
-  height: 50px;
-  width: auto;
-  pointer-events: none;
-  z-index: 1;
-}
+            /* Footer sticks to bottom */
+            #footer {
+                text-align: center;
+                padding: 1rem 0;
+                width: 100%;
+                flex-shrink: 0;
+                background-color: rgba(0, 0, 0, 0.3);
+                border-top: 1px solid rgba(255, 255, 255, 0.1);
+                z-index: 2;
+                position: relative;
+            }
 
-/* Tooltip box ABOVE icon */
-.tooltip .tooltiptext {
-  visibility: hidden;
-  opacity: 0;
-  position: absolute;
-  bottom: 100%; /* Sit directly above the icon */
-  left: 50%;
-  transform: translateX(-50%) translateY(-50px); /* raise it slightly */
-  background-color: rgba(0, 0, 0, 0.9);
-  color: white;
-  text-align: center;
-  border-radius: 6px;
-  padding: 6px 10px;
-  font-size: 0.8rem;
-  white-space: nowrap;
-  z-index: 2;
-  pointer-events: none;
-  transition: opacity 0.3s ease;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-}
+            /* SCROLLER TOOLTIP STYLES */
+            .tooltip {
+                position: relative;
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+                margin: 0 40px;
+            }
+            .tooltip img {
+                height: 50px;
+                width: auto;
+                pointer-events: none;
+                z-index: 1;
+            }
+            .tooltip .tooltiptext {
+                visibility: hidden;
+                opacity: 0;
+                position: absolute;
+                bottom: 100%;
+                left: 50%;
+                transform: translateX(-50%) translateY(-50px);
+                background-color: rgba(0, 0, 0, 0.9);
+                color: white;
+                text-align: center;
+                border-radius: 6px;
+                padding: 6px 10px;
+                font-size: 0.8rem;
+                white-space: nowrap;
+                z-index: 2;
+                pointer-events: none;
+                transition: opacity 0.3s ease;
+                box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+            }
+            .tooltip:hover .tooltiptext,
+            .tooltip:focus-within .tooltiptext {
+                visibility: visible;
+                opacity: 1;
+            }
+            @media (hover: none) {
+                .tooltip .tooltiptext {
+                    bottom: auto;
+                    top: 110%;
+                }
+            }
 
-/* Show tooltip on hover/focus */
-.tooltip:hover .tooltiptext,
-.tooltip:focus-within .tooltiptext {
-  visibility: visible;
-  opacity: 1;
-}
+            /* Tech colors */
+            .tooltip.java .tooltiptext { background-color: #b07219; }
+            .tooltip.spring .tooltiptext { background-color: #6db33f; }
+            .tooltip.aws .tooltiptext { background-color: #232f3e; }
+            .tooltip.terraform .tooltiptext { background-color: #5c4ee5; }
+            .tooltip.kafka .tooltiptext { background-color: #231f20; }
+            .tooltip.docker .tooltiptext { background-color: #2496ed; }
+            .tooltip.postgresql .tooltiptext { background-color: #336791; }
+            .tooltip.camunda .tooltiptext { background-color: #f23c3c; }
 
+            /* Horizontal tech scroller */
+            .tech-scroller {
+                overflow-x: hidden;
+                overflow-y: clip;
+                position: relative;
+                width: 100%;
+                padding: 1rem 0;
+            }
+            .tech-track {
+                display: flex;
+                align-items: center;
+                animation: scroll 30s linear infinite;
+                width: max-content;
+            }
+            @keyframes scroll {
+                0% { transform: translateX(0); }
+                100% { transform: translateX(-50%); }
+            }
 
-/* TOOLTIP PLACEMENT ON MOBILE */
-@media (hover: none) {
-  .tooltip .tooltiptext {
-    bottom: auto;
-    top: 110%;
-  }
-}
-
-/* CUSTOM COLORED TOOLTIP BACKGROUNDS */
-.tooltip.java .tooltiptext { background-color: #b07219; }
-.tooltip.spring .tooltiptext { background-color: #6db33f; }
-.tooltip.aws .tooltiptext { background-color: #232f3e; }
-.tooltip.terraform .tooltiptext { background-color: #5c4ee5; }
-.tooltip.kafka .tooltiptext { background-color: #231f20; }
-.tooltip.docker .tooltiptext { background-color: #2496ed; }
-.tooltip.postgresql .tooltiptext { background-color: #336791; }
-.tooltip.camunda .tooltiptext { background-color: #f23c3c; }
-/* SCROLLER CONTAINER */
-.tech-scroller {
-  overflow-x: hidden;
-  overflow-y: clip; /* prevent vertical scrollbar but allow tooltips */
-  position: relative;
-  width: 100%;
-  padding: 1rem 0;
-}
-
-/* SCROLLING TRACK */
-.tech-track {
-  display: flex;
-  align-items: center;
-  animation: scroll 30s linear infinite;
-  width: max-content;
-}
-
-/* FADE IN AND OUT EFFECT */
-@keyframes scroll {
-  0% { transform: translateX(0); }
-  100% { transform: translateX(-50%); }
-}
-
+            /* Responsive adjustments */
+            @media (max-height: 700px) {
+                #header .content p {
+                    font-size: 0.85rem;
+                }
+                #wrapper {
+                    padding-top: 1rem;
+                }
+            }
 		</style>
+
 	</head>
 	<body class="is-preload">
 
@@ -475,13 +530,13 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 					</div>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<p class="copyright">&copy; Caylin John Naidoo. <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</footer>
+
 
 			</div>
-
+		<!-- Footer -->
+		<footer id="footer">
+			<p class="copyright">&copy; Caylin John Naidoo. <a href="https://html5up.net">HTML5 UP</a>.</p>
+		</footer>
 		<!-- BG -->
 			<div id="bg"></div>
 
