--- a/index.html
+++ b/index.html
@@ -113,14 +113,10 @@
 			}
             .tooltip:hover .tooltiptext,
             .tooltip:focus-within .tooltiptext {
-                visibility: hidden;
-                opacity: 0;
-            }
-            @media (hover: none) {
-                .tooltip .tooltiptext {
-                    bottom: auto;
-                    top: 110%;
-                }
+                visibility: visible;
+                opacity: 100%;
+                background-color: rgba(255, 255, 255, 10);
+                color: rgba(0, 0, 0, 1); /* 50% transparent white */
             }
 
             /* Tech colors */
@@ -137,8 +133,8 @@
             .tech-scroller {
 			  overflow-x: hidden;
 			  overflow-y: visible;
-			  position: relative;
-			  width: 100%;
+			  position: center;
+			  width: 60%;
 			  height: 15%;
 			  padding: 1rem 1rem;
 			}
@@ -168,6 +164,11 @@
 			#sep {
 				height: 60%
 			}
+
+			body.is-article-visible .tech-scroller {
+			  display: none !important;
+			}
+
 		</style>
 
 	</head>
@@ -194,28 +195,7 @@
 
 	</header>
 				<div id="sep"></div>
-				<div class="tech-scroller">
-					<div class="tech-track">
-						<div class="tooltip"><img src="icons/java.svg" alt="Java" /><span class="tooltiptext">Java</span></div>
-						<div class="tooltip"><img src="icons/spring-icon.svg" alt="Spring Boot" /><span class="tooltiptext">Spring Boot</span></div>
-						<div class="tooltip"><img src="icons/aws.svg" alt="AWS" /><span class="tooltiptext">Amazon Web Services</span></div>
-						<div class="tooltip"><img src="icons/terraform-icon.svg" alt="Terraform" /><span class="tooltiptext">Terraform</span></div>
-						<div class="tooltip"><img src="icons/kafka-icon.svg" alt="Kafka" /><span class="tooltiptext">Apache Kafka</span></div>
-						<div class="tooltip"><img src="icons/docker-icon.svg" alt="Docker" /><span class="tooltiptext">Docker</span></div>
-						<div class="tooltip"><img src="icons/postgresql.svg" alt="PostgreSQL" /><span class="tooltiptext">PostgreSQL</span></div>
-						<div class="tooltip"><img src="icons/camunda.png" alt="Camunda" /><span class="tooltiptext">Camunda</span></div>
 
-						<!-- Duplicate for smooth looping -->
-						<div class="tooltip"><img src="icons/java.svg" alt="Java" /><span class="tooltiptext">Java</span></div>
-						<div class="tooltip"><img src="icons/spring-icon.svg" alt="Spring Boot" /><span class="tooltiptext">Spring Boot</span></div>
-						<div class="tooltip"><img src="icons/aws.svg" alt="AWS" /><span class="tooltiptext">Amazon Web Services</span></div>
-						<div class="tooltip"><img src="icons/terraform-icon.svg" alt="Terraform" /><span class="tooltiptext">Terraform</span></div>
-						<div class="tooltip"><img src="icons/kafka-icon.svg" alt="Kafka" /><span class="tooltiptext">Apache Kafka</span></div>
-						<div class="tooltip"><img src="icons/docker-icon.svg" alt="Docker" /><span class="tooltiptext">Docker</span></div>
-						<div class="tooltip"><img src="icons/postgresql.svg" alt="PostgreSQL" /><span class="tooltiptext">PostgreSQL</span></div>
-						<div class="tooltip"><img src="icons/camunda.png" alt="Camunda" /><span class="tooltiptext">Camunda</span></div>
-					</div>
-				</div>
 				<!-- Main -->
 					<div id="main">
 
@@ -525,7 +505,44 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							</article>
 
 					</div>
+				<div class="tech-scroller">
+					<div class="tech-track">
+						<div class="tooltip"><img src="icons/java.svg" alt="Java" /><span class="tooltiptext">Java</span></div>
+						<div class="tooltip"><img src="icons/spring-icon.svg" alt="Spring Boot" /><span class="tooltiptext">Spring Boot</span></div>
+						<div class="tooltip"><img src="icons/aws.svg" alt="AWS" /><span class="tooltiptext">Amazon Web Services</span></div>
+						<div class="tooltip"><img src="icons/terraform-icon.svg" alt="Terraform" /><span class="tooltiptext">Terraform</span></div>
+						<div class="tooltip"><img src="icons/kafka-icon.svg" alt="Kafka" /><span class="tooltiptext">Apache Kafka</span></div>
+						<div class="tooltip"><img src="icons/docker-icon.svg" alt="Docker" /><span class="tooltiptext">Docker</span></div>
+						<div class="tooltip"><img src="icons/postgresql.svg" alt="PostgreSQL" /><span class="tooltiptext">PostgreSQL</span></div>
+						<div class="tooltip"><img src="icons/camunda.png" alt="Camunda" /><span class="tooltiptext">Camunda</span></div>
 
+						<!-- Duplicate for smooth looping -->
+						<div class="tooltip"><img src="icons/java.svg" alt="Java" /><span class="tooltiptext">Java</span></div>
+						<div class="tooltip"><img src="icons/spring-icon.svg" alt="Spring Boot" /><span class="tooltiptext">Spring Boot</span></div>
+						<div class="tooltip"><img src="icons/aws.svg" alt="AWS" /><span class="tooltiptext">Amazon Web Services</span></div>
+						<div class="tooltip"><img src="icons/terraform-icon.svg" alt="Terraform" /><span class="tooltiptext">Terraform</span></div>
+						<div class="tooltip"><img src="icons/kafka-icon.svg" alt="Kafka" /><span class="tooltiptext">Apache Kafka</span></div>
+						<div class="tooltip"><img src="icons/docker-icon.svg" alt="Docker" /><span class="tooltiptext">Docker</span></div>
+						<div class="tooltip"><img src="icons/postgresql.svg" alt="PostgreSQL" /><span class="tooltiptext">PostgreSQL</span></div>
+						<div class="tooltip"><img src="icons/camunda.png" alt="Camunda" /><span class="tooltiptext">Camunda</span></div>
+						<div class="tooltip"><img src="icons/java.svg" alt="Java" /><span class="tooltiptext">Java</span></div>
+						<div class="tooltip"><img src="icons/spring-icon.svg" alt="Spring Boot" /><span class="tooltiptext">Spring Boot</span></div>
+						<div class="tooltip"><img src="icons/aws.svg" alt="AWS" /><span class="tooltiptext">Amazon Web Services</span></div>
+						<div class="tooltip"><img src="icons/terraform-icon.svg" alt="Terraform" /><span class="tooltiptext">Terraform</span></div>
+						<div class="tooltip"><img src="icons/kafka-icon.svg" alt="Kafka" /><span class="tooltiptext">Apache Kafka</span></div>
+						<div class="tooltip"><img src="icons/docker-icon.svg" alt="Docker" /><span class="tooltiptext">Docker</span></div>
+						<div class="tooltip"><img src="icons/postgresql.svg" alt="PostgreSQL" /><span class="tooltiptext">PostgreSQL</span></div>
+						<div class="tooltip"><img src="icons/camunda.png" alt="Camunda" /><span class="tooltiptext">Camunda</span></div>
+						<div class="tooltip"><img src="icons/java.svg" alt="Java" /><span class="tooltiptext">Java</span></div>
+						<div class="tooltip"><img src="icons/spring-icon.svg" alt="Spring Boot" /><span class="tooltiptext">Spring Boot</span></div>
+						<div class="tooltip"><img src="icons/aws.svg" alt="AWS" /><span class="tooltiptext">Amazon Web Services</span></div>
+						<div class="tooltip"><img src="icons/terraform-icon.svg" alt="Terraform" /><span class="tooltiptext">Terraform</span></div>
+						<div class="tooltip"><img src="icons/kafka-icon.svg" alt="Kafka" /><span class="tooltiptext">Apache Kafka</span></div>
+						<div class="tooltip"><img src="icons/docker-icon.svg" alt="Docker" /><span class="tooltiptext">Docker</span></div>
+						<div class="tooltip"><img src="icons/postgresql.svg" alt="PostgreSQL" /><span class="tooltiptext">PostgreSQL</span></div>
+						<div class="tooltip"><img src="icons/camunda.png" alt="Camunda" /><span class="tooltiptext">Camunda</span></div>
+					</div>
+				</div>
 
 				<!-- Footer -->
 				<footer id="footer">
