--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             /* Header text formatting */
             #header .content p {
                 text-transform: none !important;
-                text-align: justify;
+                text-align: center;
                 text-align-last: center;
                 margin-left: auto;
                 margin-right: auto;
