--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 					<style>
 						#map {
-                          height: 100%;
+                          height: 300px;
                           width: 30%;
                           margin: 2rem auto;
                           border-radius: 12px;
